@@ -1,3 +1,9 @@
+2020-08-06 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Add composite units to completion (if not hidden and not already included through prefix completion)
+	* Add category to SI unit titles in completion
+	* Group hexadecimal digits
+
 2020-08-03 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Show error message when gnuplot is not installed when the user tries to open the plot dialog, instead of disabling the menu item
